--- a/codesquare/src/main/resources/templates/fragments/header2.html
+++ b/codesquare/src/main/resources/templates/fragments/header2.html
@@ -43,14 +43,14 @@
 
 			</div>
 			<!-- 푸쉬 팝업 -->
-			<div id="pushbar" align="right">
+<!-- 			<div id="pushbar" align="right">
 				<img class="push_img" src='/static/images/logo.png' />
 				<div id="text">
 					<strong> Notification
 						&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong> <span
 						class="close">&times;</span> </br> 회원님의 게시글에 댓글이 달렸습니다.
 				</div>
-			</div>
+			</div> -->
 		</div>
 		<!-- 알림닫힘 -->
 
