--- a/codesquare/src/main/resources/templates/lecture/lecture.html
+++ b/codesquare/src/main/resources/templates/lecture/lecture.html
@@ -75,7 +75,7 @@
 											alt="좋아요"> <span class="heart-count"
 											style="display: inline-block;">0</span>
 										<!-- LIKE -->
-										<section id="like" class="rating">
+										<section id="like" class="rating" style="margin-bottom:8px; padding:0;">
 											<!-- FIFTH HEART -->
 											<input type="radio" id="heart_5" name="like" value="5" /> <label
 												for="heart_5" title="Five">&#10084;</label>
