--- a/codesquare/src/main/resources/templates/board/freeBoard.html
+++ b/codesquare/src/main/resources/templates/board/freeBoard.html
@@ -85,7 +85,7 @@ text-decoration: none;
 			<tr th:each="Board:${list}">
 
 
-	             <td><a th:href="@{'/freeView/'+${boardKindId}+'?id=' + ${Board.id}}"><span th:text="${Board.title}" style="color: black; font-weight: bold; padding-right: 150px;"></span></a></td>
+	             <td><a th:href="@{'/freeView/'+${boardKindId}+'?id=' + ${Board.id}}"><span th:text="|${Board.title} &nbsp; [${Board.commentCount}]|" style="color: black; font-weight: bold; padding-right: 150px;"></span></a></td>
 	             <td style="padding-left: 100px;"><div class="dropdown dropright">
 						<a class=" dropdown-toggle" data-toggle="dropdown"> <span
 							id="nickName" th:text="${Board.nickName}"></span>
