--- a/codesquare/src/main/resources/templates/layout/plannerLayout.html
+++ b/codesquare/src/main/resources/templates/layout/plannerLayout.html
@@ -69,10 +69,10 @@
           </h6>
           <ul class="nav flex-column mb-2">
             <li class="nav-item">
-              <a class="nav-link" th:href="@{/dashboard}"><i class="fas fa-user-tie"></i> Dashboard</a>
+              <a class="nav-link" th:href="@{/dashboard}"><i class="fas fa-bars"></i> Dashboard</a>
             </li>
 			<li class="nav-item">
-              <a class="nav-link" th:href="@{/myplanner}"><i class="fas fa-user-tie"></i> Planner </a>
+              <a class="nav-link" th:href="@{/myplanner}"><i class="far fa-heart"></i> Planner </a>
             </li>
             <li class="nav-item2">
 			  <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle "><i class="fas fa-user-tie"></i> Groups</a>
@@ -83,9 +83,8 @@
 			  </ul>
 			</li>
             
-            
       		<li class="nav-item">
-              <a class="nav-link" th:href="@{/calendar}"><i class="fas fa-user-tie"></i> Calendar</a>
+              <a class="nav-link" th:href="@{/calendar}"><i class="	fas fa-calendar-alt"></i> Calendar</a>
             </li>
           </ul>
         </div>
